# Team-2-CSE-331

./: README.md
331.Skeet/: Skeet.vcxproj  Status.h  advance.cpp  advance.h  bird.cpp  bird.h  bullet.cpp  bullet.h  impulse.cpp  impulse.h  score.cpp  score.h  skeet.cpp  skeet.h
331.Skeet _template/: CMakeLists.txt  Skeet.vcxproj  advanceTemplate.h  bird.cpp  bird.h  skeet.cpp
331.Skeet _template/x64/Debug/: Skeet.exe.recipe  Skeet.ilk  Skeet.vcxproj.FileListAbsolute.txt  vc143.idb
331.Skeet _template/x64/Debug/Skeet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Skeet.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Observer/331.Skeet/: bullet.h  score.cpp  score.h
